# Scatter_WebGL

./: .gitignore  CLAUDE.md  README.md  ScatterVisNewData.ipynb  environment.yml  profile_engine.py  pyproject.toml
resources/: TrackballControls.js
scatterview/: __init__.py  __main__.py  cli.py  defaults.py
scatterview/core/: camera.py  data_loader.py  event_detection.py  interpolation.py  time_mapping.py
scatterview/gui/: controls.py  export.py
scatterview/rendering/: engine.py  sphere_material.py
scatterview/tests/: test_camera.py  test_data_loader.py  test_interpolation.py  test_render.py  test_time_mapping.py
