[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scatterview"
version = "2.0.0"
description = "N-body simulation visualization tool with cubic spline interpolation, variable framerate, and automated camera control"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.22",
    "scipy>=1.12",
    "pandas>=1.3",
    "h5py",
    "vispy>=0.14",
    "imageio[ffmpeg]",
]

[project.optional-dependencies]
gui = ["PyQt5"]
dev = ["pytest"]

[project.scripts]
scatterview = "scatterview.cli:main"

[tool.setuptools.packages.find]
include = ["scatterview*"]
